[package]
name = "stdrename"
version = "1.1.0"
authors = ["Gabriel Lacroix <lacroixgabriel@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"
description = "`stdrename` is a small command line utility to rename all files in a folder according to a specified naming convention (camelCase, snake_case, kebab-case, etc.)."
readme = "README.md"
repository = "https://github.com/Gadiguibou/stdrename"
keywords = ["utility", "rename"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
ignore = "0.4.16"
clap = "2.33.3"
cfg-if = "0.1"